RESOLVED FIXED118475
@readonly and @aria-readonly="false" are not exposed correctly to accessibility
https://bugs.webkit.org/show_bug.cgi?id=118475
Summary @readonly and @aria-readonly="false" are not exposed correctly to accessibility
Attachments
patch (13.72 KB, patch)
2013-07-08 14:46 PDT, James Craig
no flags
patch (13.71 KB, patch)
2013-07-08 14:51 PDT, James Craig
cfleizach: review+
patch, with comment typo corrections (13.71 KB, patch)
2013-07-08 22:52 PDT, James Craig
cfleizach: review+
commit-queue: commit-queue-
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (566.20 KB, application/zip)
2013-07-09 04:33 PDT, Build Bot
no flags
patch, adding the "Reviewed by NOBODY" string accidentally removed from the changelog (13.75 KB, patch)
2013-07-09 09:02 PDT, James Craig
no flags
Radar WebKit Bug Importer
Comment 1 2013-07-08 09:50:33 PDT
James Craig
Comment 2 2013-07-08 14:46:17 PDT
WebKit Commit Bot
Comment 3 2013-07-08 14:47:58 PDT
Attachment 206271 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/accessibility/aria-readonly-expected.txt', u'LayoutTests/accessibility/aria-readonly.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/accessibility/AccessibilityRenderObject.cpp']" exit_code: 1 Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2713: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
James Craig
Comment 4 2013-07-08 14:51:34 PDT
James Craig
Comment 5 2013-07-08 22:52:20 PDT
Created attachment 206291 [details] patch, with comment typo corrections m. no code changes since reviewed. just corrected comments in the test case previously meaning "required" state instead of "readonly."
James Craig
Comment 6 2013-07-08 22:53:06 PDT
s/meaning/mentioning/
WebKit Commit Bot
Comment 7 2013-07-09 00:21:53 PDT
Comment on attachment 206291 [details] patch, with comment typo corrections Rejecting attachment 206291 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 206291, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/892626
Build Bot
Comment 8 2013-07-09 04:33:34 PDT
Comment on attachment 206291 [details] patch, with comment typo corrections Attachment 206291 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/909548 New failing tests: fullscreen/full-screen-iframe-with-max-width-height.html
Build Bot
Comment 9 2013-07-09 04:33:36 PDT
Created attachment 206308 [details] Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
James Craig
Comment 10 2013-07-09 09:02:07 PDT
Created attachment 206325 [details] patch, adding the "Reviewed by NOBODY" string accidentally removed from the changelog
WebKit Commit Bot
Comment 11 2013-07-09 17:40:36 PDT
Comment on attachment 206325 [details] patch, adding the "Reviewed by NOBODY" string accidentally removed from the changelog Clearing flags on attachment: 206325 Committed r152522: <http://trac.webkit.org/changeset/152522>
WebKit Commit Bot
Comment 12 2013-07-09 17:40:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.