@readonly and @aria-readonly="false" are not exposed correctly to accessibility https://bugs.webkit.org/show_bug.cgi?id=118475

Patch by James Craig <james@cookiecrook.com> on 2013-07-09
Reviewed by Chris Fleizach.

Source/WebCore:

Account for implicit and explicit @readonly/@aria-readonly mismatches. Updated existing test coverage.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::canSetValueAttribute):

LayoutTests:

Updated existing test to account for implicit and explicit @readonly/@aria-readonly mismatches.

* accessibility/aria-readonly-expected.txt:
* accessibility/aria-readonly.html:

Canonical link: https://commits.webkit.org/136476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152522 268f45cc-cd09-0410-ab3c-d52691b4dbfc